# mozdetect

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: github-actions-demo.yml  main-release.yml  main.yml
examples/: sample_detection_run.py
src/mozdetect/: __init__.py  data.py  telemetry_query.py  utils.py
src/mozdetect/detectors/: __init__.py  base.py  cdf.py  cdf_squared.py
src/mozdetect/timeseries_detectors/: __init__.py  base.py  cdf.py  cdf_squared.py  detection.py
tests/: support.py  test_data.py  test_detectors.py  test_telemetry_query.py
