[project]
name = "mozdetect"
version = "0.0.1"
description = "A python package used for change point detection at Mozilla."
authors = ["Gregory Mierzwinski <sparky@mozilla.com>"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.poetry]
name = "mozdetect"
version = "0.0.1"
description = "A python package used for change point detection at Mozilla."
authors = ["Gregory Mierzwinski <sparky@mozilla.com>"]
readme = "README.md"
packages = [{from="src", include="mozdetect"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

# Assume Python 3.9
target-version = "py39"

extend-exclude = ["*/.*/",".*/","__pycache__"]

select = [
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # pep8-naming
  "N"
]

ignore = [
  # E501: line too long
  "E501",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
]


